--- a/index.html
+++ b/index.html
@@ -2,20 +2,46 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>First Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MyWebsite</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <header>
         <nav class="menu">
+          <div>
           <ul>
             <li><a href="#">Sobre</a></li>
             <li><a href="#">Portfólio</a></li>
             <li><a href="#">Contato</a></li>
           </ul>
+          </div>
         </nav>
-        <h1 class="titulo">José Gabriel</h1>
-        <h2 class="sub-titulo">Web Devolper</h2>
+        <div>
+          <h1 class="titulo">José Gabriel</h1>
+          <h2 class="sub-titulo">Web Devolper</h2>
+        </div>
       </header>
+        <section>
+          <h2 class="port">Portfólio</h2>
+          <br>
+          <br>
+          <figure>
+            <img class="img-portfolio" src="./img/ecomerce.jpg">
+            <h3><figcaption>eCommerce</figcaption></h3>
+            <br>
+            <br>
+          </figure>
+          <figure>
+            <img class="img-portfolio" src="./img/mobile.jpg">
+            <h3><figcaption>Mobile</figcaption></h3>
+            <br>
+            <br>
+
+          <figure>
+            <img class="img-portfolio" src="./img/Projetos Pessoais.jpg">
+            <h3><figcaption>Projetos pessoais</figcaption></h3>
+          </figure>
+        </section>
 </body>
 </html>
