--- a/index.html
+++ b/index.html
@@ -5,43 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyWebsite</title>
     <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400&family=Gloria+Hallelujah&family=Oswald:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="menu">
-          <div>
-          <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Portfólio</a></li>
-            <li><a href="#">Contato</a></li>
-          </ul>
-          </div>
-        </nav>
-        <div>
-          <h1 class="titulo">José Gabriel</h1>
-          <h2 class="sub-titulo">Web Devolper</h2>
-        </div>
-      </header>
-        <section>
-          <h2 class="port">Portfólio</h2>
-          <br>
-          <br>
+  <header>
+    <nav class="menu">
+      <div>
+        <ul>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Projetos</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </div>
+    </nav>
+      <div>
+        <h1 class="titulo">José Gabriel</h1>
+        <h2 class="sub-titulo">Web Devolper</h2>
+        <h2 class="sub-titulo">Alguma coisa</h2>
+      </div>
+  </header>
+    <section class="portifolio">
+      <h2>Projetos</h2>
+        <div class="grid">
           <figure>
-            <img class="img-portfolio" src="./img/ecomerce.jpg">
+            <img class="img-portfolio" src="./img/ecomerce.jpg" alt="eCommerce">
             <h3><figcaption>eCommerce</figcaption></h3>
-            <br>
-            <br>
           </figure>
           <figure>
-            <img class="img-portfolio" src="./img/mobile.jpg">
+            <img class="img-portfolio" src="./img/mobile.jpg"alt="Mobile">
             <h3><figcaption>Mobile</figcaption></h3>
-            <br>
-            <br>
-
+          </figure>
           <figure>
-            <img class="img-portfolio" src="./img/Projetos Pessoais.jpg">
+            <img class="img-portfolio" src="./img/Projetos Pessoais.jpg"alt="Projetos Pessoais">
             <h3><figcaption>Projetos pessoais</figcaption></h3>
           </figure>
+        </div>
         </section>
 </body>
 </html>
